added individual array functions for difficulty

--- a/index.html
+++ b/index.html
@@ -18,8 +18,8 @@
     <div>
         <span>Level:</span>
         <select class="level">
-            <option value="easy">Beginner</option>
-            <option value="beginner">Easy</option>
+            <option value="beginner">Beginner</option>
+            <option value="easy">Easy</option>
             <option value="intermediate">Intermediate</option>
         </select>
         <button class="newGame" type="button">New game</button>
