--- a/index.html
+++ b/index.html
@@ -1,34 +1,37 @@
 <!DOCTYPE html>
 <html lang="en" dir="ltr">
-  <head>
-    <meta charset="utf-8">
-    <link rel="stylesheet" href="style/styles.css">
-    <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
-      <title></title>
-  </head>
-  <body>
-    <div id="game" class="minesweeper">
+
+<head>
+  <meta charset="utf-8">
+  <link rel="stylesheet" href="style/styles.css">
+  <script src="https://code.jquery.com/jquery-3.3.1.js"></script>
+  <title></title>
+</head>
+
+<body>
+  <div id="game" class="minesweeper">
     <div>
-        <h2>
-            <span>Your time:</span>
-            <span class="timer">0</span>
-        </h2>
+      <h2>
+        <span>Your time:</span>
+        <span class="timer">0</span>
+      </h2>
     </div>
     <div>
-        <span>Level:</span>
-        <select class="level">
-            <option id='beginner' value="beginner">Beginner</option>
-            <option id='easy' value="easy">Easy</option>
-            <option id='intermediate' value="intermediate">Intermediate</option>
-        </select>
+      <span>Level:</span>
+      <select class="level">
+        <option id='beginner' value="beginner">Beginner</option>
+        <option id='easy' value="easy">Easy</option>
+        <option id='intermediate' value="intermediate">Intermediate</option>
+      </select>
 
     </div>
     <button class='newGame'>New game</button>
 
     <div class="board"></div>
-    <section class= 'gameGrid'>
-    </section>
+      <table class= 'go'>
+      </table>
   </div>
-    <script src="scripts/app.js" charset="utf-8"></script>
-  </body>
+  <script src="scripts/app.js" charset="utf-8"></script>
+</body>
+
 </html>
